--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     </head>
     <body>
-        <h2>Hi, Site currently down for huge update</h2>
+        <h2>Hi, Site currently down for huge update.</h2>
         <p>Stay tuned!</p>
     </body>
 </html>
