--- a/home.html
+++ b/home.html
@@ -12,10 +12,11 @@
 }
 
 .topbar {
-    height: 36px;
+    height: 56px;
     width: 100%;
     margin: 0;
     padding: 0;
+    margin-left: 6px;
     display: fixed;
     z-index: 99;
     position: relative;
@@ -25,25 +26,26 @@ body {
     padding: 0;
     margin: 0;
     background-color: grey;
+    background-image: url("https://i.ibb.co/Tw214F4/Roblox-Player-Beta-ez5-Gqt2j-ZG.png");
 }
 
 .topbar_button {
     background-color: black;
     border: 0;
     margin-top: 5px;
-    margin-left: 10px;
+    margin-left: 13px;
     opacity: 1;
     border-radius: 5px;
     color: white;
     opacity: 0.5;
-    padding-top: 5.5px;
-    padding-bottom: 5.5px;
+    padding-top: 7px;
+    padding-bottom: 7px;
     padding-left: 10px;
-    padding-right: 10px;
+    padding-right: 12px;
 }
 
 
-.topbar_ul {
+.topbar_ul:not(.topbar_menu_btn) {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -56,14 +58,10 @@ body {
 
 .topbar_selected {
     background: linear-gradient(#0099FF, #00478F);
+
 }
 
-.topbar_button {
-border-bottom: 5px solid transparent;
-    border-image: linear-gradient(#0099FF, #00478F);
-    border-image-slice: 1;
-    border-radius: 5px;
-}
+
 
         </style>
         <link rel="stylesheet" href="style.css">
@@ -73,7 +71,7 @@ border-bottom: 5px solid transparent;
         <div class="topbar">
             <div class="topbar_container"></div>
             <ul class="topbar_ul">
-                        <li class="topbar_li"><button class="topbar_button" style="padding-top: 3px; padding-bottom: 3px; padding-left: 5px; padding-right: 5px;"><span class="material-symbols-outlined" style="font-size: 17px">
+                        <li class="topbar_li topbar_menu_btn"><button class="topbar_button topbar_menu_btn" style="padding-top: 5px; padding-bottom: 5px; padding-left: 5.5px; padding-right: 5.5px; margin-left: 10px;"><span class="material-symbols-outlined" style="font-size: 20px">
 menu
 </span></button></li>
 
