--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
     <body>
         <h2>Hi, Site currently down for huge update.</h2>
         <p>Stay tuned!</p>
+        <a href="https://raw.githubusercontent.com/duccveloper/BetterNilam/main/superdarkmode.js">super dark mode</a>
+        <a href="https://raw.githubusercontent.com/duccveloper/BetterNilam/main/darkmode.js">normal dark</a>
     </body>
 </html>
