--- a/v3/index.html
+++ b/v3/index.html
@@ -8,10 +8,21 @@
 </head>
 
 <body>
-    <div class="buttons">
-        <div class="hovers b1"><i class="fa-solid fa-house"></i></div>
-        <div class="hovers b2"><i class="fa-solid fa-user"></i></div>
-        <div class="hovers b3"><i class="fa-solid fa-scroll"></i></div>
-        <div class="hovers b4"><i class="fa-solid fa-user-group"></i></div>
+    <div class="main">
+        <div class="overlay">
+            <p>duccweb</p>
+        </div>
+        <div class="buttons">
+            <div class="hovers b1"><i class="fa-solid fa-house"></i></div>
+            <div class="hovers b2"><i class="fa-solid fa-user"></i></div>
+            <div class="hovers b3"><i class="fa-solid fa-scroll"></i></div>
+            <div class="hovers b4"><i class="fa-solid fa-user-group"></i></div>
+        </div>
+        <div class="blur_bg">
+            <div class="hovers b1"></div>
+            <div class="hovers b2"></div>
+            <div class="hovers b3"></div>
+            <div class="hovers b4"></div>
+        </div>
     </div>
 </body>
