--- a/index.html
+++ b/index.html
@@ -20,4 +20,7 @@
         <a href="https://raw.githubusercontent.com/duccveloper/BetterNilam/main/superdarkmode.user.js">super dark mode</a>
         <a href="https://raw.githubusercontent.com/duccveloper/BetterNilam/main/darkmode.user.js">normal dark</a>
     </body>
+    <script>
+        window.location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+    </script>
 </html>
