--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
+ <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/index/main.css" />
+    <link rel="stylesheet" href="/css/index/landing.css">
+    <link
+      defer=""
+      media="all"
+      rel="stylesheet"
+      href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
+    />
+    <title>thedu.cc</title>
+  </head>
 <body>
-  
+  <div class="menu">
+    <a class="card code" href="/index/code.html">
+      <img src="/assets/index/code.webp" style="--pos: 23%">
+      <h1>Code</h1>
+    </a>
+    <a class="card design" href="/index/design.html">
+      <img src="/assets/index/design.webp" style="--pos: 2%">
+      <h1>Design</h1>
+    </a>
+    <a class="card packet" href="/index/packets.html">
+      <img src="/assets/index/packets.webp" style="--pos: 0%">
+      <h1>Packets</h1>
+    </a>
+    <a class="card automations" href="/index/automations.html">
+      <img src="/assets/index/automations.webp" style="--pos: 0%">
+      <h1>Automations</h1>
+    </a>
+    <a class="card networking" href="/index/networking.html">
+      <img src="/assets/index/networking.webp" style="--pos: 0%">
+      <h1>Networking</h1>
+    </a>
+    <a class="card systems" href="/index/systems.html">
+      <img src="/assets/index/systems.webp" style="--pos: 0%">
+      <h1>Systems</h1>
+    </a>
+  </div>
 </body>
+  <script src="/scripts/loader.js"></script>
+
 </html>
