--- a/index/code.html
+++ b/index/code.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/index_desc.css" />
+    <link rel="stylesheet" href="/css/index/main.css">
+    <link rel="stylesheet" href="/css/index/desc.css" />
     <link
       defer=""
       media="all"
@@ -13,17 +14,7 @@
     <title>Code</title>
   </head>
   <body>
-    <div class="topbar">
-      <div>
-        <i class="fa-solid fa-arrow-left"></i>
-        <a href=".">thedu.cc</a>
-      </div>
-      <div>
-        <a href="">Projects</a>
-        <a href="blog.html">Blog</a>
-      </div>
-    </div>
-    <img src="./assets/index/code_bg.png" alt="VSCode UI" class="bg" />
+    <img src="/assets/index/code.webp" alt="VSCode" class="bg" />
     <div class="main-c">
       <h1>Code</h1>
       <div class="category-c">
@@ -63,7 +54,7 @@
           <div
             class="card"
             style="--color: #f7df1d"
-            data-project-id="betterNilam"
+            data-project-id="betternilam"
           >
             <div>
               <span>Javascript</span>
@@ -76,7 +67,7 @@
               </div>
             </div>
           </div>
-          <div class="card" style="--color: #f7df1d">
+          <div class="card" style="--color: #f7df1d" data-project-id="duccos">
             <div>
               <span>Javascript</span>
               <div>
@@ -101,4 +92,5 @@
       </div>
     </div>
   </body>
+  <script src="/scripts/loader.js"></script>
 </html>
