--- a/index/automations.html
+++ b/index/automations.html
@@ -57,7 +57,7 @@
             <div>
               <span>MacroDroid <b>(PRIVATE)</b></span>
               <div>
-                <h2>duccOS</h2>
+                <h2>Farm Memer</h2>
                 <span
                   >Used to automate grinding commands to get badges. Full
                   fledged with fail-safe recovery systems.</span
