image is too ugly

--- a/elements/topbar.html
+++ b/elements/topbar.html
@@ -1,7 +1,7 @@
 <div class="topbar">
   <div>
     <a href="/index.html"><i class="fa-solid fa-arrow-left"></i></a>
-    <a href=".">thedu.cc</a>
+    <a href="/index.html">thedu.cc</a>
   </div>
   <div>
     <!-- <a href="">Projects</a>
