--- a/index/automations.html
+++ b/index/automations.html
@@ -12,9 +12,9 @@
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
     <title>Code</title>
+    <script src="/scripts/loader.js"></script>
   </head>
-  <body>
-    <img src="/assets/index/automations.webp" alt="Macrodroid" class="bg" />
+  <body style="--color: #9db5d4">
     <div class="main-c">
       <h1>Automations</h1>
       <div class="category-c">
@@ -69,5 +69,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
