--- a/index/code.html
+++ b/index/code.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/index/main.css">
+    <link rel="stylesheet" href="/css/index/main.css" />
     <link rel="stylesheet" href="/css/index/desc.css" />
     <link
       defer=""
@@ -11,10 +11,10 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
+    <script src="/scripts/loader.js"></script>
     <title>Code</title>
   </head>
-  <body>
-    <img src="/assets/index/code.webp" alt="VSCode" class="bg" />
+  <body style="--color: #f7df1d">
     <div class="main-c">
       <h1>Code</h1>
       <div class="category-c">
@@ -92,5 +92,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
