--- a/index/design.html
+++ b/index/design.html
@@ -12,9 +12,9 @@
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
     <title>Design</title>
+    <script src="/scripts/loader.js"></script>
   </head>
-  <body>
-    <img src="/assets/index/design.webp" alt="Figma" class="bg" />
+  <body style="--color: #a259ff">
     <div class="main-c">
       <h1>Design</h1>
       <div class="category-c">
@@ -52,5 +52,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
