--- a/index/networking.html
+++ b/index/networking.html
@@ -12,9 +12,9 @@
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
     <title>Code</title>
+    <script src="/scripts/loader.js"></script>
   </head>
-  <body>
-    <img src="/assets/index/networking.webp" alt="OpenWRT" class="bg" />
+  <body style="--color: #688cbd">
     <div class="main-c">
       <h1>Networking</h1>
       <div class="category-c">
@@ -56,5 +56,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
