--- a/index/packets.html
+++ b/index/packets.html
@@ -12,9 +12,9 @@
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
     <title>Packets</title>
+    <script src="/scripts/loader.js"></script>
   </head>
-  <body>
-    <img src="/assets/index/packets.webp" alt="Burp Suite" class="bg" />
+  <body style="--color: #ff6632">
     <div class="main-c">
       <h1>Packets</h1>
       <div class="category-c">
@@ -109,5 +109,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
