--- a/index/systems.html
+++ b/index/systems.html
@@ -12,11 +12,11 @@
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
     <title>Code</title>
+    <script src="/scripts/loader.js"></script>
   </head>
-  <body>
-    <img src="/assets/index/systems.webp" alt="VSCode" class="bg" />
+  <body style="--color: #78c683">
     <div class="main-c">
-      <h1>Code</h1>
+      <h1>Systems</h1>
       <div class="category-c">
         <span>Skills</span>
         <div class="pill-c">
@@ -46,8 +46,11 @@
                 <h2>Polaris</h2>
                 <span>OS: EvoX (Android 15)</span>
                 <span>Root: KSU-next</span>
-                <br>
-                <span>Has knowledge about rooting, bootloader, custom ROMs, fastboot, ADB.</span>
+                <br />
+                <span
+                  >Has knowledge about rooting, bootloader, custom ROMs,
+                  fastboot, ADB.</span
+                >
               </div>
             </div>
           </div>
@@ -56,7 +59,9 @@
               <span>Windows</span>
               <div>
                 <span
-                  >Ex Windows user. Has knowledge about infrastructure of Windows systems. (eg: registry, group policy, task scheduler, cmd)</span
+                  >Ex Windows user. Has knowledge about infrastructure of
+                  Windows systems. (eg: registry, group policy, task scheduler,
+                  cmd)</span
                 >
               </div>
             </div>
@@ -65,5 +70,4 @@
       </div>
     </div>
   </body>
-  <script src="/scripts/loader.js"></script>
 </html>
