index revamp, old sucks

--- a/index.html
+++ b/index.html
@@ -11,19 +11,28 @@
       rel="stylesheet"
       href="https://site-assets.fontawesome.com/releases/v7.1.0/css/fontawesome.css"
     />
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.14.1/dist/MotionPathPlugin.min.js"></script>
     <title>thedu.cc</title>
     <script src="/scripts/loader.js"></script>
   </head>
   <body>
-    <div class="menu">
-      <a class="card code" href="/index/code.html"> Code </a>
-      <a class="card design" href="/index/design.html"> Design </a>
-      <a class="card packet" href="/index/packets.html"> Packets </a>
-      <a class="card automations" href="/index/automations.html">
-        Automations
-      </a>
-      <a class="card networking" href="/index/networking.html"> Networking </a>
-      <a class="card systems" href="/index/systems.html"> Systems </a>
+    <div id="sparkles"></div>
+    <div id="body">
+      <div class="menu">
+        <a class="card code" href="/index/code.html"> Code </a>
+        <a class="card design" href="/index/design.html"> Design </a>
+        <a class="card packet" href="/index/packets.html"> Packets </a>
+        <a class="card automations" href="/index/automations.html">
+          Automations
+        </a>
+        <a class="card networking" href="/index/networking.html">
+          Networking
+        </a>
+        <a class="card systems" href="/index/systems.html"> Systems </a>
+      </div>
     </div>
   </body>
+  <script src="/scripts/index/sparkles.js"></script>
 </html>
