--- a/index/code.html
+++ b/index/code.html
@@ -15,77 +15,83 @@
     <title>Code</title>
   </head>
   <body style="--color: #f7df1d">
-    <div class="main-c">
-      <h1>Code</h1>
-      <div class="category-c">
-        <span>Languages</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #f7df1d">
-            <span>Javascript</span>
+    <div id="body">
+      <div class="main-c">
+        <h1>Code</h1>
+        <div class="category-c">
+          <span>Languages</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #f7df1d">
+              <span>Javascript</span>
+            </div>
+            <div class="pill" style="--color: #178bff"><span>Lua</span></div>
+            <div class="pill" style="--color: #b3bcc3"><span>Batch</span></div>
+            <div class="pill" style="--color: #3884e2"><span>Shell</span></div>
           </div>
-          <div class="pill" style="--color: #178bff"><span>Lua</span></div>
-          <div class="pill" style="--color: #b3bcc3"><span>Batch</span></div>
-          <div class="pill" style="--color: #3884e2"><span>Shell</span></div>
         </div>
-      </div>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #4a9642"><span>node.js</span></div>
-          <div class="pill" style="--color: #9feaf9"><span>Electron</span></div>
-          <div class="pill" style="--color: #acacac">Roblox</div>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #4a9642">
+              <span>node.js</span>
+            </div>
+            <div class="pill" style="--color: #9feaf9">
+              <span>Electron</span>
+            </div>
+            <div class="pill" style="--color: #acacac">Roblox</div>
+          </div>
         </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #f7df1d" data-project-id="sim">
-            <div>
-              <span>Javascript</span>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div class="card" style="--color: #f7df1d" data-project-id="sim">
               <div>
-                <h2>SIM</h2>
-                <span
-                  >Automated login flow to get and convert timetable data into
-                  iCalendar (.ics) file.</span
-                >
+                <span>Javascript</span>
+                <div>
+                  <h2>SIM</h2>
+                  <span
+                    >Automated login flow to get and convert timetable data into
+                    iCalendar (.ics) file.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="card"
-            style="--color: #f7df1d"
-            data-project-id="betternilam"
-          >
-            <div>
-              <span>Javascript</span>
+            <div
+              class="card"
+              style="--color: #f7df1d"
+              data-project-id="betternilam"
+            >
               <div>
-                <h2>BetterNilam</h2>
-                <span
-                  >Automatically submits ChatGPT generated books to Nilam
-                  system.</span
-                >
+                <span>Javascript</span>
+                <div>
+                  <h2>BetterNilam</h2>
+                  <span
+                    >Automatically submits ChatGPT generated books to Nilam
+                    system.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card" style="--color: #f7df1d" data-project-id="duccos">
-            <div>
-              <span>Javascript</span>
+            <div class="card" style="--color: #f7df1d" data-project-id="duccos">
               <div>
-                <h2>duccOS</h2>
-                <span
-                  >An operating system built using VanillaJS and uses GSAP to
-                  animate.</span
-                >
+                <span>Javascript</span>
+                <div>
+                  <h2>duccOS</h2>
+                  <span
+                    >An operating system built using VanillaJS and uses GSAP to
+                    animate.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="card more"
-            style="--color: #ffffff; justify-content: center"
-          >
-            <div class="more">
-              <i class="fa-solid fa-arrow-right"></i>
-              <span>More</span>
+            <div
+              class="card more"
+              style="--color: #ffffff; justify-content: center"
+            >
+              <div class="more">
+                <i class="fa-solid fa-arrow-right"></i>
+                <span>More</span>
+              </div>
             </div>
           </div>
         </div>
