--- a/index/networking.html
+++ b/index/networking.html
@@ -15,40 +15,44 @@
     <script src="/scripts/loader.js"></script>
   </head>
   <body style="--color: #688cbd">
-    <div class="main-c">
-      <h1>Networking</h1>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #688cbd">
-            <span>OpenWRT</span>
-          </div>
-          <div class="pill" style="--color: #688cbd">Physical</div>
-          <div class="pill" style="--color: #688cbd"><span>Networks</span></div>
-        </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #688cbd">
-            <div>
+    <div id="body">
+      <div class="main-c">
+        <h1>Networking</h1>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #688cbd">
               <span>OpenWRT</span>
-              <div>
-                <span
-                  >My home router uses OpenWRT. DDNS, Port Forwarding and
-                  Firewall setup to allow remote LAN access.</span
-                >
-              </div>
+            </div>
+            <div class="pill" style="--color: #688cbd">Physical</div>
+            <div class="pill" style="--color: #688cbd">
+              <span>Networks</span>
             </div>
           </div>
-          <div class="card" style="--color: #688cbd">
-            <div>
-              <span>Networks <b>(EXPERIMENTAL)</b></span>
+        </div>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div class="card" style="--color: #688cbd">
               <div>
-                <span
-                  >DDNS and firewall setup in my school router to achieve remote
-                  backdoor. <b>(It is now removed)</b></span
-                >
+                <span>OpenWRT</span>
+                <div>
+                  <span
+                    >My home router uses OpenWRT. DDNS, Port Forwarding and
+                    Firewall setup to allow remote LAN access.</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card" style="--color: #688cbd">
+              <div>
+                <span>Networks <b>(EXPERIMENTAL)</b></span>
+                <div>
+                  <span
+                    >DDNS and firewall setup in my school router to achieve
+                    remote backdoor. <b>(It is now removed)</b></span
+                  >
+                </div>
               </div>
             </div>
           </div>
