--- a/index/packets.html
+++ b/index/packets.html
@@ -15,94 +15,96 @@
     <script src="/scripts/loader.js"></script>
   </head>
   <body style="--color: #ff6632">
-    <div class="main-c">
-      <h1>Packets</h1>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #e34727">
-            <span>HTTP Toolkit</span>
-          </div>
-          <div class="pill" style="--color: #ff6632">
-            <span>Burp Suite</span>
-          </div>
-          <div class="pill" style="--color: #a289df">
-            <span>PCAP (Mainly PCAPDroid)</span>
-          </div>
-          <div class="pill" style="--color: #6093f2">
-            <span>Wireshark</span>
-          </div>
-          <div class="pill" style="--color: #acacac">
-            <span>DevTools</span>
+    <div id="body">
+      <div class="main-c">
+        <h1>Packets</h1>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #e34727">
+              <span>HTTP Toolkit</span>
+            </div>
+            <div class="pill" style="--color: #ff6632">
+              <span>Burp Suite</span>
+            </div>
+            <div class="pill" style="--color: #a289df">
+              <span>PCAP (Mainly PCAPDroid)</span>
+            </div>
+            <div class="pill" style="--color: #6093f2">
+              <span>Wireshark</span>
+            </div>
+            <div class="pill" style="--color: #acacac">
+              <span>DevTools</span>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #e34727" data-project-id="sim">
-            <div>
-              <span>HTTP Toolkit</span>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div class="card" style="--color: #e34727" data-project-id="sim">
               <div>
-                <h2>SIM</h2>
-                <span
-                  >Used to capture and analyze Microsoft B2C auth requests and
-                  OutSystem API calls.</span
-                >
+                <span>HTTP Toolkit</span>
+                <div>
+                  <h2>SIM</h2>
+                  <span
+                    >Used to capture and analyze Microsoft B2C auth requests and
+                    OutSystem API calls.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="card"
-            style="--color: #ff6632"
-            data-project-id="dankmemer"
-          >
-            <div>
-              <span>Burp Suite</span>
+            <div
+              class="card"
+              style="--color: #ff6632"
+              data-project-id="dankmemer"
+            >
               <div>
-                <h2>Dank Memer</h2>
-                <span
-                  >Got a bug bounty by finding a duplication glitch of in-game
-                  currency in their website.</span
-                >
+                <span>Burp Suite</span>
+                <div>
+                  <h2>Dank Memer</h2>
+                  <span
+                    >Got a bug bounty by finding a duplication glitch of in-game
+                    currency in their website.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card" style="--color: #a289df">
-            <div>
-              <span>PCAPDroid</span>
+            <div class="card" style="--color: #a289df">
               <div>
-                <h2>Damn Memer</h2>
-                <span
-                  >Used to capture requests in Dank Memer Freemium voting system
-                  and automate it.</span
-                >
+                <span>PCAPDroid</span>
+                <div>
+                  <h2>Damn Memer</h2>
+                  <span
+                    >Used to capture requests in Dank Memer Freemium voting
+                    system and automate it.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="card"
-            style="--color: #acacac"
-            data-project-id="betternilam"
-          >
-            <div>
-              <span>DevTools</span>
+            <div
+              class="card"
+              style="--color: #acacac"
+              data-project-id="betternilam"
+            >
               <div>
-                <h2>BetterNilam</h2>
-                <span
-                  >Used to capture book submission requests and automate
-                  it.</span
-                >
+                <span>DevTools</span>
+                <div>
+                  <h2>BetterNilam</h2>
+                  <span
+                    >Used to capture book submission requests and automate
+                    it.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div
-            class="card more"
-            style="--color: #ffffff; justify-content: center"
-          >
-            <div class="more">
-              <i class="fa-solid fa-arrow-right"></i>
-              <span>More</span>
+            <div
+              class="card more"
+              style="--color: #ffffff; justify-content: center"
+            >
+              <div class="more">
+                <i class="fa-solid fa-arrow-right"></i>
+                <span>More</span>
+              </div>
             </div>
           </div>
         </div>
