--- a/index/systems.html
+++ b/index/systems.html
@@ -15,54 +15,62 @@
     <script src="/scripts/loader.js"></script>
   </head>
   <body style="--color: #78c683">
-    <div class="main-c">
-      <h1>Systems</h1>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #aaaaaa"><span>Linux</span></div>
-          <div class="pill" style="--color: #7cc3fa"><span>Windows</span></div>
-          <div class="pill" style="--color: #78c683">Android (Rooting)</div>
-        </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #aaaaaa">
-            <div>
-              <span>Linux</span>
-              <div>
-                <span
-                  >I'm now using Fedora Linux. Currently learning more about
-                  it.</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="card" style="--color: #78c683" data-project-id="polaris">
-            <div>
-              <span>Android (Rooting)</span>
-              <div>
-                <h2>Polaris</h2>
-                <span>OS: EvoX (Android 15)</span>
-                <span>Root: KSU-next</span>
-                <br />
-                <span
-                  >Has knowledge about rooting, bootloader, custom ROMs,
-                  fastboot, ADB.</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="card" style="--color: #7cc3fa">
-            <div>
+    <div id="body">
+      <div class="main-c">
+        <h1>Systems</h1>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #aaaaaa"><span>Linux</span></div>
+            <div class="pill" style="--color: #7cc3fa">
               <span>Windows</span>
+            </div>
+            <div class="pill" style="--color: #78c683">Android (Rooting)</div>
+          </div>
+        </div>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div class="card" style="--color: #aaaaaa">
               <div>
-                <span
-                  >Ex Windows user. Has knowledge about infrastructure of
-                  Windows systems. (eg: registry, group policy, task scheduler,
-                  cmd)</span
-                >
+                <span>Linux</span>
+                <div>
+                  <span
+                    >I'm now using Fedora Linux. Currently learning more about
+                    it.</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div
+              class="card"
+              style="--color: #78c683"
+              data-project-id="polaris"
+            >
+              <div>
+                <span>Android (Rooting)</span>
+                <div>
+                  <h2>Polaris</h2>
+                  <span>OS: EvoX (Android 15)</span>
+                  <span>Root: KSU-next</span>
+                  <br />
+                  <span
+                    >Has knowledge about rooting, bootloader, custom ROMs,
+                    fastboot, ADB.</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="card" style="--color: #7cc3fa">
+              <div>
+                <span>Windows</span>
+                <div>
+                  <span
+                    >Ex Windows user. Has knowledge about infrastructure of
+                    Windows systems. (eg: registry, group policy, task
+                    scheduler, cmd)</span
+                  >
+                </div>
               </div>
             </div>
           </div>
