--- a/index/automations.html
+++ b/index/automations.html
@@ -15,53 +15,58 @@
     <script src="/scripts/loader.js"></script>
   </head>
   <body style="--color: #9db5d4">
-    <div class="main-c">
-      <h1>Automations</h1>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #688cbd">
-            <span>MacroDroid</span>
+    <div id="body">
+      <div class="main-c">
+        <h1>Automations</h1>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #688cbd">
+              <span>MacroDroid</span>
+            </div>
+            <div class="pill" style="--color: #f99c23">Tasker</div>
+            <div class="pill" style="--color: #4a9642">
+              <span>node.js</span>
+            </div>
           </div>
-          <div class="pill" style="--color: #f99c23">Tasker</div>
-          <div class="pill" style="--color: #4a9642"><span>node.js</span></div>
         </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #688cbd">
-            <div>
-              <span>Macrodroid <b>(PRIVATE)</b></span>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div class="card" style="--color: #688cbd">
               <div>
-                <h2>Damn Memer</h2>
-                <span
-                  >Used to automate voting process across multiple alts. Full
-                  fledged with menu and fail-safe recovery systems.</span
-                >
+                <span>Macrodroid <b>(PRIVATE)</b></span>
+                <div>
+                  <h2>Damn Memer</h2>
+                  <span
+                    >Used to automate voting process across multiple alts. Full
+                    fledged with menu and fail-safe recovery systems.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card" style="--color: #4a9642">
-            <div>
-              <span>node.js + MacroDroid <b>(WIP, PRIVATE)</b></span>
+            <div class="card" style="--color: #4a9642">
               <div>
-                <h2>Integrations</h2>
-                <span
-                  >Cross device communications to achieve remote control.</span
-                >
+                <span>node.js + MacroDroid <b>(WIP, PRIVATE)</b></span>
+                <div>
+                  <h2>Integrations</h2>
+                  <span
+                    >Cross device communications to achieve remote
+                    control.</span
+                  >
+                </div>
               </div>
             </div>
-          </div>
-          <div class="card" style="--color: #688cbd">
-            <div>
-              <span>MacroDroid <b>(PRIVATE)</b></span>
+            <div class="card" style="--color: #688cbd">
               <div>
-                <h2>Farm Memer</h2>
-                <span
-                  >Used to automate grinding commands to get badges. Full
-                  fledged with fail-safe recovery systems.</span
-                >
+                <span>MacroDroid <b>(PRIVATE)</b></span>
+                <div>
+                  <h2>Farm Memer</h2>
+                  <span
+                    >Used to automate grinding commands to get badges. Full
+                    fledged with fail-safe recovery systems.</span
+                  >
+                </div>
               </div>
             </div>
           </div>
