--- a/index/design.html
+++ b/index/design.html
@@ -15,36 +15,42 @@
     <script src="/scripts/loader.js"></script>
   </head>
   <body style="--color: #a259ff">
-    <div class="main-c">
-      <h1>Design</h1>
-      <div class="category-c">
-        <span>Skills</span>
-        <div class="pill-c">
-          <div class="pill" style="--color: #a259ff"><span>Figma</span></div>
-          <div class="pill" style="--color: #cd4f2e">
-            <span>PowerPoint</span>
-          </div>
-        </div>
-      </div>
-      <div class="category-c">
-        <span>Projects</span>
-        <div class="card-c">
-          <div class="card" style="--color: #a259ff" data-project-id="theducc">
-            <div>
-              <span>Figma</span>
-              <div>
-                <h2>thedu.cc</h2>
-                <span>My own portfolio website.</span>
-              </div>
+    <div id="body">
+      <div class="main-c">
+        <h1>Design</h1>
+        <div class="category-c">
+          <span>Skills</span>
+          <div class="pill-c">
+            <div class="pill" style="--color: #a259ff"><span>Figma</span></div>
+            <div class="pill" style="--color: #cd4f2e">
+              <span>PowerPoint</span>
             </div>
           </div>
-          <div class="card" style="--color: #cd4f2e" data-project-id="duccos">
-            <div>
-              <span>Figma + PowerPoint</span>
+        </div>
+        <div class="category-c">
+          <span>Projects</span>
+          <div class="card-c">
+            <div
+              class="card"
+              style="--color: #a259ff"
+              data-project-id="theducc"
+            >
               <div>
-                <h2>duccOS</h2>
-                <span>UI/UX - Figma</span>
-                <span>Wallpaper - PowerPoint</span>
+                <span>Figma</span>
+                <div>
+                  <h2>thedu.cc</h2>
+                  <span>My own portfolio website.</span>
+                </div>
+              </div>
+            </div>
+            <div class="card" style="--color: #cd4f2e" data-project-id="duccos">
+              <div>
+                <span>Figma + PowerPoint</span>
+                <div>
+                  <h2>duccOS</h2>
+                  <span>UI/UX - Figma</span>
+                  <span>Wallpaper - PowerPoint</span>
+                </div>
               </div>
             </div>
           </div>
