--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="Portfolio website for ducc (Yi Jun)">
+    <meta name="keywords" content="theducc, ducc, yijun">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/index/main.css" />
     <link rel="stylesheet" href="/css/index/landing.css" />
